<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CureFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exercise"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/exercise"
            android:textSize="24sp"
            android:textStyle="italic"
            android:background="@drawable/install_btn_background_white"
            android:clickable="true"
            android:drawableTint="@color/black"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/shade4"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_meditation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/meditation"
            android:textSize="24sp"
            android:textStyle="italic"
            android:background="@drawable/install_btn_background_white"
            android:clickable="true"
            android:drawableTint="@color/black"
            android:focusable="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/shade4"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_music"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/music"
            android:textSize="24sp"
            android:textStyle="italic"
            android:background="@drawable/install_btn_background_white"
            android:clickable="true"
            android:drawableTint="@color/black"
            android:focusable="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/shade4"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_inhale_exhale"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/inhale_exhale"
            android:textSize="24sp"
            android:textStyle="italic"
            android:background="@drawable/install_btn_background_white"
            android:clickable="true"
            android:drawableTint="@color/black"
            android:focusable="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/shade4"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yoga"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/yoga"
            android:textSize="24sp"
            android:textStyle="italic"
            android:background="@drawable/install_btn_background_white"
            android:clickable="true"
            android:drawableTint="@color/black"
            android:focusable="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/shade4"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>